Initial cleanup based on ORM 7.4 and hibernate-models